[gd_scene load_steps=21 format=2]

[ext_resource path="res://Scripts/HardTab.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Audiowide/Audiowide-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Fonts/Stalinist_One/StalinistOne-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Fonts/Courgette/Courgette-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Fonts/pixel-takhisis-font/PixelTakhisis-ZajJ.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Scenes/Characters/Octopus.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Characters/Fish2N.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Characters/Fish3N.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Characters/Fish1.tscn" type="PackedScene" id=9]
[ext_resource path="res://Resources/UI/HeartUIEmpty.png" type="Texture" id=10]
[ext_resource path="res://Resources/UI/HeartUIFull.png" type="Texture" id=11]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 8
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 1, 1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
expand_margin_top = 2.0
shadow_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
expand_margin_right = 3.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.027451, 1, 0.0862745, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
expand_margin_left = 3.0
expand_margin_right = 3.0

[sub_resource type="Theme" id=6]
TabContainer/colors/font_color_bg = Color( 1, 1, 0, 1 )
TabContainer/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
TabContainer/colors/font_color_fg = Color( 1, 0, 0, 1 )
TabContainer/constants/hseparation = 4
TabContainer/constants/label_valign_bg = 2
TabContainer/constants/label_valign_fg = 0
TabContainer/constants/side_margin = 8
TabContainer/constants/top_margin = 24
TabContainer/fonts/font = SubResource( 2 )
TabContainer/icons/decrement = null
TabContainer/icons/decrement_highlight = null
TabContainer/icons/increment = null
TabContainer/icons/increment_highlight = null
TabContainer/icons/menu = null
TabContainer/icons/menu_highlight = null
TabContainer/styles/panel = SubResource( 3 )
TabContainer/styles/tab_bg = SubResource( 4 )
TabContainer/styles/tab_disabled = null
TabContainer/styles/tab_fg = SubResource( 5 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=9]
size = 12
font_data = ExtResource( 2 )

[node name="LevelMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 1 )
text = "Levels"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 32.0
theme = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hard" type="Tabs" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 25.0
margin_right = -2.0
margin_bottom = -2.0
script = ExtResource( 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="TabContainer/Hard"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Node2D" parent="TabContainer/Hard/RichTextLabel"]

[node name="Panel1" type="Panel" parent="TabContainer/Hard/RichTextLabel/Control"]
margin_left = 8.0
margin_top = 1.0
margin_right = 100.0
margin_bottom = 107.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="TabContainer/Hard/RichTextLabel/Control/Panel1"]
anchor_right = 1.0
margin_left = 5.0
margin_top = 72.0
margin_right = -4.99999
margin_bottom = 97.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color_disabled = Color( 1, 1, 0, 0.286275 )
custom_colors/font_color = Color( 1, 1, 0, 1 )
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Play"

[node name="Label" type="Label" parent="TabContainer/Hard/RichTextLabel/Control/Panel1"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -38.5
margin_top = -30.0
margin_right = 36.5
margin_bottom = -9.0
custom_fonts/font = SubResource( 8 )
text = "Level 1"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fish1" parent="TabContainer/Hard/RichTextLabel/Control/Panel1" instance=ExtResource( 9 )]
position = Vector2( 44.0682, 65.9612 )
movement = false

[node name="Empty" type="TextureRect" parent="TabContainer/Hard/RichTextLabel/Control/Panel1"]
margin_left = 23.0
margin_top = 13.0
margin_right = 68.0
margin_bottom = 24.0
texture = ExtResource( 10 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Full" type="TextureRect" parent="TabContainer/Hard/RichTextLabel/Control/Panel1"]
margin_left = 23.0
margin_top = 13.0
margin_right = 23.0
margin_bottom = 24.0
texture = ExtResource( 11 )
expand = true
stretch_mode = 2

[node name="Panel2" type="Panel" parent="TabContainer/Hard/RichTextLabel/Control"]
margin_left = 119.0
margin_top = 1.0
margin_right = 211.0
margin_bottom = 107.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="TabContainer/Hard/RichTextLabel/Control/Panel2"]
anchor_right = 1.0
margin_left = 5.0
margin_top = 72.0
margin_right = -4.99999
margin_bottom = 97.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color_disabled = Color( 1, 1, 0, 0.286275 )
custom_colors/font_color = Color( 1, 1, 0, 1 )
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Play"

[node name="Label" type="Label" parent="TabContainer/Hard/RichTextLabel/Control/Panel2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -38.5
margin_top = -30.0
margin_right = 36.5
margin_bottom = -9.0
custom_fonts/font = SubResource( 8 )
text = "Level 2"
align = 1

[node name="Fish2" parent="TabContainer/Hard/RichTextLabel/Control/Panel2" instance=ExtResource( 7 )]
position = Vector2( 64.5446, 67.4595 )
movement = false

[node name="Fish3" parent="TabContainer/Hard/RichTextLabel/Control/Panel2" instance=ExtResource( 8 )]
position = Vector2( 21.4683, 65.9612 )
movement = false

[node name="Sprite" parent="TabContainer/Hard/RichTextLabel/Control/Panel2/Fish3" index="0"]
flip_h = true

[node name="Empty" type="TextureRect" parent="TabContainer/Hard/RichTextLabel/Control/Panel2"]
margin_left = 23.0
margin_top = 13.0
margin_right = 68.0
margin_bottom = 24.0
texture = ExtResource( 10 )
expand = true
stretch_mode = 2

[node name="Full" type="TextureRect" parent="TabContainer/Hard/RichTextLabel/Control/Panel2"]
margin_left = 23.0
margin_top = 13.0
margin_right = 23.0
margin_bottom = 24.0
texture = ExtResource( 11 )
expand = true
stretch_mode = 2

[node name="Panel3" type="Panel" parent="TabContainer/Hard/RichTextLabel/Control"]
margin_left = 233.0
margin_top = 1.0
margin_right = 325.0
margin_bottom = 107.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="TabContainer/Hard/RichTextLabel/Control/Panel3"]
anchor_right = 1.0
margin_left = 5.0
margin_top = 72.0
margin_right = -4.99998
margin_bottom = 97.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color_disabled = Color( 1, 1, 0, 0.286275 )
custom_colors/font_color = Color( 1, 1, 0, 1 )
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Play"

[node name="Label" type="Label" parent="TabContainer/Hard/RichTextLabel/Control/Panel3"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -38.5
margin_top = -30.0
margin_right = 36.5
margin_bottom = -9.0
custom_fonts/font = SubResource( 8 )
text = "Level 3"
align = 1

[node name="Octopus" parent="TabContainer/Hard/RichTextLabel/Control/Panel3" instance=ExtResource( 6 )]
position = Vector2( 46.0649, 75.4854 )
movement = false

[node name="Sprite" parent="TabContainer/Hard/RichTextLabel/Control/Panel3/Octopus" index="0"]
position = Vector2( -0.598297, -12.4235 )
scale = Vector2( 0.986135, 0.756023 )
frame = 2

[node name="Empty" type="TextureRect" parent="TabContainer/Hard/RichTextLabel/Control/Panel3"]
margin_left = 23.0
margin_top = 13.0
margin_right = 68.0
margin_bottom = 24.0
texture = ExtResource( 10 )
expand = true
stretch_mode = 2

[node name="Full" type="TextureRect" parent="TabContainer/Hard/RichTextLabel/Control/Panel3"]
margin_left = 23.0
margin_top = 13.0
margin_right = 23.0
margin_bottom = 24.0
texture = ExtResource( 11 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel4" type="Panel" parent="TabContainer/Hard/RichTextLabel/Control"]
margin_left = 344.0
margin_top = 1.0
margin_right = 436.0
margin_bottom = 107.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="TabContainer/Hard/RichTextLabel/Control/Panel4"]
anchor_right = 1.0
margin_left = 5.0
margin_top = 72.0
margin_right = -4.99997
margin_bottom = 99.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color_disabled = Color( 1, 1, 0, 0.286275 )
custom_colors/font_color = Color( 1, 1, 0, 1 )
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Play"

[node name="Label" type="Label" parent="TabContainer/Hard/RichTextLabel/Control/Panel4"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -38.5
margin_top = -30.0
margin_right = 36.5
margin_bottom = -9.0
custom_fonts/font = SubResource( 8 )
text = "Level 4"
align = 1

[node name="Label2" type="Label" parent="TabContainer/Hard/RichTextLabel/Control/Panel4"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -38.5
margin_top = -8.0
margin_right = 36.5
margin_bottom = 13.0
custom_fonts/font = SubResource( 9 )
text = "BOSS"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Empty" type="TextureRect" parent="TabContainer/Hard/RichTextLabel/Control/Panel4"]
margin_left = 23.0
margin_top = 13.0
margin_right = 68.0
margin_bottom = 24.0
texture = ExtResource( 10 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Full" type="TextureRect" parent="TabContainer/Hard/RichTextLabel/Control/Panel4"]
margin_left = 23.0
margin_top = 13.0
margin_right = 23.0
margin_bottom = 24.0
texture = ExtResource( 11 )
expand = true
stretch_mode = 2

[node name="HScrollBar" type="HScrollBar" parent="TabContainer/Hard"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -12.0
max_value = 180.0
page = 50.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_up" from="TabContainer/Hard/RichTextLabel/Control/Panel1/Button" to="TabContainer/Hard" method="_on_Button1_button_up"]
[connection signal="button_up" from="TabContainer/Hard/RichTextLabel/Control/Panel2/Button" to="TabContainer/Hard" method="_on_Button2_button_up"]
[connection signal="button_up" from="TabContainer/Hard/RichTextLabel/Control/Panel3/Button" to="TabContainer/Hard" method="_on_Button3_button_up"]
[connection signal="button_up" from="TabContainer/Hard/RichTextLabel/Control/Panel4/Button" to="TabContainer/Hard" method="_on_Button4_button_up"]

[editable path="TabContainer/Hard/RichTextLabel/Control/Panel2/Fish3"]

[editable path="TabContainer/Hard/RichTextLabel/Control/Panel3/Octopus"]
